syntax = "proto3";

option go_package = "main/internal/microservices/wave/proto";
import "track.proto";
//    protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  -I../proto -I../../track/proto  -I../../session/proto   -I../../candidate/proto wave.proto
service WaveService {
  rpc GetMyWaveMusic(UserIdCount) returns(TracksResponse) {}
}

message UserIdCount {
  string UserId = 1;
  uint32 TrackCount = 2;
}
